feat: #58 Implement endpoint to retrieve entitlements
